update document how to create icon for CallKit

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_ios_voip_kit
 description: One-to-one video call using CallKit and PushKit with flutter ios app.
-version: 0.0.3+1
+version: 0.0.4
 homepage: https://github.com/masashi-sutou/flutter_ios_voip_kit
 
 environment:
